--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="top">
-        <span class="top-wenzi"><a href="">重要通知</a></span>
-        <span class="top-wenzi"><a href="">此文档是y1版本 对于y2 文档迁移指南访问yark.cn</a></span>
+        <span class="top-wenzi w"><a href="">重要通知</a></span>
+        <span class="top-wenzi w"><a href="">此文档是y1版本 对于y2 文档迁移指南访问yark.cn</a></span>
 
     </div>
     <div class="men">
-        <div class="men-leirong">
-            <div class="men-leirong-left">
+        <div class="men-leirong w">
+            <div class="men-leirong-left w">
                 <span><a href="./shuzu.html">快速入门</a></span>
                 <span><a href="">中文文档</a></span>
                 <span><a href="">博客</a></span>
@@ -22,9 +22,9 @@
         </div>
     </div>
     <div class="top-three">
-        <div class="wenzi">快速，可靠，安全的依赖工具</div>
-        <div class="anniu">
-            <div class="anniu-button">
+        <div class="wenzi w">快速，可靠，安全的依赖工具</div>
+        <div class="anniu w">
+            <div class="anniu-button w">
             <button><a href="./shuzu.html">快速入门</a></button>
             <button>安装</button>
             <button>迁移到</button></div>
@@ -32,9 +32,9 @@
             </div>
         </div>
     </div>
-    <div class="pic-1">
-        <div class="pic-wenzi">
-            <p class="one">速度超快</p>
+    <div class="pic-1 w">
+        <div class="pic-wenzi ">
+            <p class="one w">速度超快</p>
             <p>缓冲了每个下载的包，并且利用安装了多个利用率，
                 下载安装很快
             </p>
@@ -65,13 +65,13 @@
             <img src="./images/3.png" alt="">
         </div>
     </div>
-    <div class="hero">
+    <div class="hero w">
        <div class="hero-h">
        <div class="hero-h-left">你还在等什么</div>
-       <div class="hero-h-right"><button><a href="./shuzu.html">快速入门</a></button></div>
+       <div class="hero-h-right"><button><a href="">快速入门</a></button></div>
        </div>
     </div>
-    <div class="bottom">
+    <div class="bottom w">
         <div class="bottom-one">
             <div class="bottom-one-left">
                 <p class="li">离线模式</p>
