--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="hero w">
        <div class="hero-h">
        <div class="hero-h-left">你还在等什么</div>
-       <div class="hero-h-right"><button><a href="">快速入门</a></button></div>
+       <div class="hero-h-right"><button><a href="./shuzu.html">快速入门</a></button></div>
        </div>
     </div>
     <div class="bottom w">
